--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script>
 
 // Various accessors that specify the four dimensions of data to visualize.
-function x(d) { return d.income; }
+function x(d) { return d.year; }
 function y(d) { return d.lifeExpectancy; }
 function radius(d) { return d.population; }
 function color(d) { return d.region; }
@@ -25,13 +25,13 @@ var margin = {top: 19.5, right: 19.5, bottom: 19.5, left: 39.5},
     height = 500 - margin.top - margin.bottom;
 
 // Various scales. These domains make assumptions of data, naturally.
-var xScale = d3.scale.log().domain([1988, 2009]).range([0, width]),
+var xScale = d3.scale.linear().domain([1988, 2009]).range([0, width]),
     yScale = d3.scale.linear().domain([0, 100]).range([height, 0]),
     radiusScale = d3.scale.sqrt().domain([0, 5e8]).range([0, 40]),
     colorScale = d3.scale.category10();
 
 // The x & y axes.
-var xAxis = d3.svg.axis().orient("bottom").scale(xScale).ticks(12, d3.format(",d")),
+var xAxis = d3.svg.axis().orient("bottom").scale(xScale).ticks(21, d3.format("d")),
     yAxis = d3.svg.axis().scale(yScale).orient("left");
 
 // Create the SVG container and set the origin.
@@ -58,7 +58,7 @@ svg.append("text")
     .attr("text-anchor", "end")
     .attr("x", width)
     .attr("y", height - 6)
-    .text("Income Per Capita");
+    .text("Year");
 
 // Add a y-axis label.
 svg.append("text")
@@ -178,7 +178,7 @@ d3.json("data/nations.json", function(nations) {
       return {
         name: d.name,
         region: d.region,
-        income: interpolateValues(d.income, year),
+        year: interpolateValues(d.year, year),
         population: interpolateValues(d.population, year),
         lifeExpectancy: interpolateValues(d.lifeExpectancy, year)
       };
